src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
/* ... */
.content-box .bundle h2 {
    margin: 0;
    font-size: 18px;
    line-height: 18px
}

.content-box .bundle h2 a {
    color: #5697bc;
    font-size: 18px
}

.content-box .award h2 a {
    color: #ed805b
}

.content-box .bundle h2 abbr {
    color: #999;
    font-size: 14px;
    font-weight: normal
}

.content-box .bundle-score {
    float: left;
    width: 70px
}

.content-box .bundle-score h3 {
    float: left;
    min-width: 25px;
    padding: 5px 6px;
    margin: 0;
    border: 6px solid #d0d0d0;
    border-radius: 7px;
    color: #6e6e6e;
    font-size: 16px;
    text-align: center;
    line-height: 16px
}

.content-box .award .bundle-score h3 {
    color: #b05939;
    border-color: #f19370
}

.content-box .bundle-info {
    float: left;
    width: 75%;
    color: #999
}

.content-box .bundle-info p {
    margin: 10px 0;
    font-size: 12px
}

.content-box .bundle-info ul {
    font-size: 11px;
    margin: 0
}

.content-box .bundle-info li {
    float: left;
    margin-right: 5px
}

.content-box .bundle-author a {
    font-weight: bold;
    color: #4a90b7
}

.content-box .bundle-activity abbr {
    font-weight: bold
}

.content-box .bundle-activity abbr.low {
    color: #d86666
}

.content-box .bundle-activity abbr.medium {
    color: #ffb30f
}

.content-box .bundle-activity abbr.high {
    color: #70aa3c
}

.content-box .bundle figure {
    float: right;
    margin: 10px 0 0
}

.content-box .bundle figure img {
    display: block;
    border: 3px solid #eee
}


/* Content - half-page column */
.content-half {
    width: 440px
}

.content-half .content-box hgroup h2 {
     margin: 10px 15px;
     font-size: 16px
}

.content-half .content-box .tab-pane > p {
    margin: 10px 15px
}

.content-half .content-box .bundle {
    width: 400px;
    padding-top: 10px;
    margin: 5px 10px 0
}

.content-half .content-box .bundle h2 {
    font-size: 14px;
    line-height: 14px
}

.content-half .content-box .bundle h2 a {
    font-size: 14px
}

.content-half .content-box .bundle-info p {
    margin-top: 5px
}


/* Content - content in tabs */
.content-box .tab-pane.markdown {
    padding: 15px
}

.content-box #configuration pre {
    line-height: 10px
}


/* Content - modal settings*/
#modal-settings {
    width: 400px
}


/* Content - left box on full size */
#content-holder.content-full {
    width: 964px;
    margin-left: 0;
    margin-right: 0;
}


/* Content - without background image */
.simple-background #content-header {
    width: 964px
}

.simple-background #steps {
    width: 655px
}

.simple-background #content-wrapper {
    background: transparent
}

.simple-background #content-header, .simple-background #content-holder {
    padding-left: 0;
    padding-right: 0
}

.simple-background #content {
    width: 655px
}


/* Content - markdown parsed text */
.markdown {
    font-size: 12px
}

.markdown h1:first-child, .markdown h2:first-child, .markdown h3:first-child {
    margin-top: 0;
}

.markdown h1 {
    color: #222;
    font-size: 24px;
    line-height: 30px
}

.markdown h2 {
    color: #222;
    font-size: 20px;
    line-height: 25px
}

.markdown h3 {
    color: #555;
    font-size: 18px;
    line-height: 20px
}

.markdown h4 {
    font-size: 14px
}

.markdown h5 {
    font-size: 12px
}

.markdown h6 {
    font-size: 10px
}

.markdown h3, .markdown h4, .markdown h5, .markdown h6 {
    line-height: 20px
}

.markdown ul {
    padding-left: 20px;
    list-style: outside circle
}

.markdown ol {
    padding-left: 20px;
    list-style: outside decimal
}


/* Pagination - main page */
.pagination {
    padding-top: 15px;
    clear: both
}

.pagination span {
    padding: 0;
    border: 0
}

.pagination a, .pagination span.current {
    color: #717171;
    font-size: 12px;
    font-weight: bold;
    line-height: 24px;
    padding: 0 9px;
    border: 1px solid #d8d8d8
}

.pagination span.current {
    background: #efefef
}

.pagination ul > li > a, .pagination ul > li > span {
    padding: 0 12px;
    line-height: 32px
}


/* Content - developers list page */
.developers-list {
    margin-bottom: 20px
}

.developers-list article {
    float: left;
    width: 235px;
    height: 71px;
    padding: 12px 25px 5px;
    border-bottom: 1px solid #ccc;
    border-right: 1px solid #ccc
}

.developers-list article.even {
    background: #f8fcfe
}

.developers-list article.no-bottom-border {
    border-bottom: 1px solid #fff
}

.developers-list article.no-right-border, .developers-list article:last-of-type {
    border-right: 1px solid #fff
}

.developers-list article.even:last-of-type, .developers-list article.even.no-right-border {
    border-right: 1px solid #f8fcfe
}

.developers-list article figure {
    float: left;
    width: 50px;
    height: 50px;
    margin: 0 20px 15px 0;
    border: 3px solid #e1e1e1
}

.developers-list article h3 {
    margin: 0;
    line-height: 16px;
    font-size: 16px
}

.developers-list article p {
    margin: 0;
    line-height: 25px;
    font-size: 11px
}

.developers-list article span {
    float: left;
    font-size: 11px;
    line-height: 13px;
    color: #aaa
}


/* Sidebar */
#sidebar {
    float: right;
    width: 270px
}

.sidebar-box {
    margin-bottom: 20px;
    background: #fff;
    border: 1px solid #dedede
}

.sidebar-box hgroup {
    padding: 0 10px;
    border-bottom: 2px solid #dedede
}

.sidebar-box hgroup h2 {
    margin: 10px 0;
    font-size: 18px;
    font-weight: normal
}

.sidebar-bundle-info section {
    margin: 3px 0
}

.sidebar-bundle-info li {
    padding: 4px 5px 3px 20px;
    font-size: 12px;
    border-bottom: 1px solid #eee
}

.sidebar-bundle-info li:last-child {
    border: 0
}

.sidebar-bundle-info li a {
    font-weight: bold
}

.sidebar-bundle-info li .symfony-versions {
    cursor: help
}

.sidebar-chart section {
    padding: 15px 15px 10px
}

.sidebar-chart section h4 {
    margin: 5px 0 0;
    color: #4a90b7;
    font-size: 11px
}

.sidebar-chart #chart {
    height: 155px;
    width: 240px
}
/* ... */

